--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,11 @@
             ]
         }
     },
-    "minimum-stability": "dev",
-    "prefer-stable": true
+    "repositories": [
+        {
+          "type": "vcs",
+          "url":  "git@github.com:jigardarji30/repo-pattern.git"
+        }
+      ],
+    "minimum-stability": "dev"
 }
