--- a/composer.json
+++ b/composer.json
@@ -27,5 +27,6 @@
           "url":  "git@github.com:jigardarji30/repo-pattern.git"
         }
       ],
-    "minimum-stability": "dev"
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
