--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,8 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "jigard",
-            "email": "jigar.d@aveosoft.com"
+            "name": "jigardarji30",
+            "email": "jigardarji30@gmail.com"
         }
     ],
     "autoload": {
